Fixes some tests
